tests/error/unbounded_static_if_recursion.c
// fail "File ends within '#if'."

#if (
d
